# tg-statistics-bot

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/core/: config.py
app/db/: sessions.py  sync_after.py
app/db/spotify/: write.py
app/db/wakatime/: write.py
app/integrations/spotify/: get_acsess_token.py  get_track_history.py
app/integrations/wakatime/: client.py
app/services/: scheduler.py  sporify_collector.py
scripts/: init_db.py
